ensuring countercheck works with java 17 and maven 3.6, adding relevant details to readme